manifest/ingress-appgw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-appgw
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
  - hosts:
    - apis.biswajitsamal.xyz
    - nginx.biswajitsamal.xyz
    secretName: ingress-secret
  rules:
  - host: "apis.biswajitsamal.xyz"
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-simple-website-svc
            port: 
              number: 80
        pathType: Exact
  - host: "nginx.biswajitsamal.xyz"
    http:
      paths:
      - path: /
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
        pathType: Exact
